runs/runs/github.com/Ipython/ipython/logs/test-notebook-tools-tests-Markdown Pandoc Limitations.ipynb-2020-07-08T06.29.txt
[I 200708 06:29:36 inrepo:36] Testing notebook tools/tests/Markdown Pandoc Limitations.ipynb
[I 200708 06:29:36 inrepo:45] Found kernel python3
[I 200708 06:29:37 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 112, in <module>
    main()
  File "/src/inrepo.py", line 108, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 74, in run_notebook
    exported = executenb(nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
try:
    import lxml
    print 'LXML found!'
except:
    print 'Warning! No LXML found - the old citation2latex filter will not work'
------------------

[0;36m  File [0;32m"<ipython-input-2-2313eb966139>"[0;36m, line [0;32m3[0m
[0;31m    print 'LXML found!'[0m
[0m                      ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print('LXML found!')?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print('LXML found!')? (<ipython-input-2-2313eb966139>, line 3)


Container exited with status: {'Error': None, 'StatusCode': 1}
